fix(mobile): dropdowns on tablet view

--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -1302,18 +1302,18 @@ body:not(.mobile) #launcher-pane.horizontal .dropdown-submenu > .dropdown-menu {
     background-color: var(--left-pane-background-color);
 }
 
-body.mobile #launcher-pane .dropdown.global-menu > .dropdown-menu.show,
-body.mobile #launcher-container .dropdown > .dropdown-menu.show {
-    position: fixed !important;
-    bottom: calc(var(--mobile-bottom-offset) + var(--launcher-pane-size)) !important;
-    top: unset !important;
-    left: 0 !important;
-    right: 0 !important;
-    transform: unset !important;
-}
-
 /* Mobile, phone mode */
 @media (max-width: 991px) {
+    body.mobile #launcher-pane .dropdown.global-menu > .dropdown-menu.show,
+    body.mobile #launcher-container .dropdown > .dropdown-menu.show {
+        position: fixed !important;
+        bottom: calc(var(--mobile-bottom-offset) + var(--launcher-pane-size)) !important;
+        top: unset !important;
+        left: 0 !important;
+        right: 0 !important;
+        transform: unset !important;
+    }
+
     #mobile-sidebar-container {
         position: fixed;
         top: 0;
@@ -1394,12 +1394,6 @@ body.mobile #launcher-container .dropdown > .dropdown-menu.show {
     body.mobile #root-widget {
         flex-direction: column-reverse !important;
         background-color: var(--launcher-pane-background-color);
-    }
-
-    body.mobile #launcher-pane .dropdown-menu.show {
-        bottom: unset !important;
-        top: calc(env(safe-area-inset-top) + var(--launcher-pane-size)) !important;
-        left: unset !important;
     }
 
     #mobile-sidebar-wrapper {
